src/snapshots/flake_add__tests__parse_multiple_follows.snap
---
source: src/lib.rs
expression: state.inputs
---
nixpkgs:
  id: nixpkgs
  flake: true
  url: "github:nixos/nixpkgs/nixos-unstable"
  follows: []
rust-overlay:
  id: rust-overlay
  flake: true
  url: "github:oxalica/rust-overlay"
  follows:
    - Indirect:
        - nixpkgs
        - "\"nixpkgs\""
    - Indirect:
        - flake-utils
        - "\"flake-utils\""

