src/snapshots/flake_add__tests__parse_multiple_inputs.snap
---
source: src/lib.rs
expression: state.inputs
---
crane:
  id: crane
  flake: true
  url: "github:ipetkov/crane"
  follows: []
nixpkgs:
  id: nixpkgs
  flake: true
  url: nixpkgs
  follows: []
rust-overlay:
  id: rust-overlay
  flake: true
  url: "github:oxalica/rust-overlay"
  follows: []
vmsh:
  id: vmsh
  flake: true
  url: "github:mic92/vmsh"
  follows: []

