src/snapshots/flake_add__tests__parse_simple_input_two_urls.snap
---
source: src/lib.rs
expression: state.inputs
---
crane:
  id: crane
  flake: true
  url: "github:nix-community/crane"
  follows: []
nixpkgs:
  id: nixpkgs
  flake: true
  url: "github:nixos/nixpkgs"
  follows: []

