src/snapshots/flake_add__tests__parse_simple_input_url.snap
---
source: src/lib.rs
expression: state.inputs
---
nixpkgs:
  id: nixpkgs
  flake: true
  url: "github:nixos/nixpkgs"
  follows: []

